--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container tooltip-container">
   <div aria-label="tooltip group"> 
       <div class="tooltip-button-group col-6" aria-describedby="buttonA">
-        <button type="button" class="btn btn-primary tooltip-button" aria-describedby="bnt-a-label" appTooltip appTooltipText="Tooltip text A">A</button>
+        <button type="button" class="btn btn-primary tooltip-button" aria-describedby="bnt-a-label" appTooltip appTooltipText="Tooltip A">A</button>
         <p id="bnt-a-label">This is 'buttonA' with tooltip please click on the button </p>
       </div>
       <div class="tooltip-button-group col-6">
-        <button type="button" class="btn btn-success tooltip-button" aria-describedby="bnt-b-label" appTooltip appTooltipText="Tooltip text B">B</button>
+        <button type="button" class="btn btn-success tooltip-button" aria-describedby="bnt-b-label" appTooltip appTooltipText="Tooltip B">B</button>
         <p id="bnt-b-label">This is 'buttonB' with tooltip please click on the button </p>
       </div>
   </div>
